# connect_app_rust

./: .env  .env.example  Cargo.toml  README.md
src/: main.rs
src/handlers/: file_handler.rs  mod.rs  page_handler.rs  wifi_api_handler.rs
src/models/: file_info.rs  mod.rs  wifi_info.rs
src/utils/: cleanup.rs  encryption.rs  mod.rs  size.rs
templates/: index.html
templates/locales/: en.json  vi.json  zh.json
