[package]
name = "Connect"
version = "0.1.0"
edition = "2024"

[dependencies]
local-ip-address = "0.6"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
wifiscanner = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytesize = "2.3.1"

tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2"

anyhow = "1.0.102"
mimalloc = "0.1.49"
tower-http = { version = "0.6.8", features = ["fs", "limit", "cors", "compression-full"] }
osc8 = "0.1"
ratatui = "0.30.0"
crossterm = "0.29.0"
mdns-sd = "0.19.1"

